build/allout.txt
-- Configuring done
-- Generating done
-- Build files have been written to: /home/simon/Documents/School/CS4220/Rollback/build
Consolidate compiler generated dependencies of target game
[ 20%] Building CXX object CMakeFiles/game.dir/src/main.cpp.o
In file included from /usr/include/c++/12.2.0/bits/alloc_traits.h:33,
                 from /usr/include/c++/12.2.0/ext/alloc_traits.h:34,
                 from /usr/include/c++/12.2.0/bits/basic_string.h:39,
                 from /usr/include/c++/12.2.0/string:53,
                 from /usr/include/c++/12.2.0/bits/locale_classes.h:40,
                 from /usr/include/c++/12.2.0/bits/ios_base.h:41,
                 from /usr/include/c++/12.2.0/ios:42,
                 from /usr/include/c++/12.2.0/ostream:38,
                 from /usr/include/c++/12.2.0/iostream:39,
                 from /home/simon/Documents/School/CS4220/Rollback/src/main.cpp:3:
/usr/include/c++/12.2.0/bits/stl_construct.h: In instantiation of ‘void std::_Construct(_Tp*, _Args&& ...) [with _Tp = Peer; _Args = {Client*}]’:
/usr/include/c++/12.2.0/bits/alloc_traits.h:635:19:   required from ‘static void std::allocator_traits<std::allocator<void> >::construct(allocator_type&, _Up*, _Args&& ...) [with _Up = Peer; _Args = {Client*}; allocator_type = std::allocator<void>]’
/usr/include/c++/12.2.0/bits/shared_ptr_base.h:604:39:   required from ‘std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {Client*}; _Tp = Peer; _Alloc = std::allocator<void>; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/12.2.0/bits/shared_ptr_base.h:971:16:   required from ‘std::__shared_count<_Lp>::__shared_count(_Tp*&, std::_Sp_alloc_shared_tag<_Alloc>, _Args&& ...) [with _Tp = Peer; _Alloc = std::allocator<void>; _Args = {Client*}; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/12.2.0/bits/shared_ptr_base.h:1712:14:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<void>; _Args = {Client*}; _Tp = Peer; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/12.2.0/bits/shared_ptr.h:464:59:   required from ‘std::shared_ptr<_Tp>::shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<void>; _Args = {Client*}; _Tp = Peer]’
/usr/include/c++/12.2.0/bits/shared_ptr.h:1009:14:   required from ‘std::shared_ptr<typename std::enable_if<(! std::is_array< <template-parameter-1-1> >::value), _Tp>::type> std::make_shared(_Args&& ...) [with _Tp = Peer; _Args = {Client*}; typename enable_if<(! is_array< <template-parameter-1-1> >::value), _Tp>::type = Peer]’
/home/simon/Documents/School/CS4220/Rollback/src/main.cpp:34:37:   required from here
/usr/include/c++/12.2.0/bits/stl_construct.h:119:7: error: invalid conversion from ‘Client*’ to ‘int’ [-fpermissive]
  119 |       ::new((void*)__p) _Tp(std::forward<_Args>(__args)...);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |       |
      |       Client*
In file included from /home/simon/Documents/School/CS4220/Rollback/src/main.cpp:11:
/home/simon/Documents/School/CS4220/Rollback/src/networking.hpp:18:12: note:   initializing argument 1 of ‘Peer::Peer(int)’
   18 |   Peer(int port) {
      |        ~~~~^~~~
/usr/include/c++/12.2.0/bits/stl_construct.h: In instantiation of ‘void std::_Construct(_Tp*, _Args&& ...) [with _Tp = Peer; _Args = {Server*}]’:
/usr/include/c++/12.2.0/bits/alloc_traits.h:635:19:   required from ‘static void std::allocator_traits<std::allocator<void> >::construct(allocator_type&, _Up*, _Args&& ...) [with _Up = Peer; _Args = {Server*}; allocator_type = std::allocator<void>]’
/usr/include/c++/12.2.0/bits/shared_ptr_base.h:604:39:   required from ‘std::_Sp_counted_ptr_inplace<_Tp, _Alloc, _Lp>::_Sp_counted_ptr_inplace(_Alloc, _Args&& ...) [with _Args = {Server*}; _Tp = Peer; _Alloc = std::allocator<void>; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/12.2.0/bits/shared_ptr_base.h:971:16:   required from ‘std::__shared_count<_Lp>::__shared_count(_Tp*&, std::_Sp_alloc_shared_tag<_Alloc>, _Args&& ...) [with _Tp = Peer; _Alloc = std::allocator<void>; _Args = {Server*}; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/12.2.0/bits/shared_ptr_base.h:1712:14:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<void>; _Args = {Server*}; _Tp = Peer; __gnu_cxx::_Lock_policy _Lp = __gnu_cxx::_S_atomic]’
/usr/include/c++/12.2.0/bits/shared_ptr.h:464:59:   required from ‘std::shared_ptr<_Tp>::shared_ptr(std::_Sp_alloc_shared_tag<_Tp>, _Args&& ...) [with _Alloc = std::allocator<void>; _Args = {Server*}; _Tp = Peer]’
/usr/include/c++/12.2.0/bits/shared_ptr.h:1009:14:   required from ‘std::shared_ptr<typename std::enable_if<(! std::is_array< <template-parameter-1-1> >::value), _Tp>::type> std::make_shared(_Args&& ...) [with _Tp = Peer; _Args = {Server*}; typename enable_if<(! is_array< <template-parameter-1-1> >::value), _Tp>::type = Peer]’
/home/simon/Documents/School/CS4220/Rollback/src/main.cpp:36:37:   required from here
/usr/include/c++/12.2.0/bits/stl_construct.h:119:7: error: invalid conversion from ‘Server*’ to ‘int’ [-fpermissive]
  119 |       ::new((void*)__p) _Tp(std::forward<_Args>(__args)...);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |       |
      |       Server*
/home/simon/Documents/School/CS4220/Rollback/src/networking.hpp:18:12: note:   initializing argument 1 of ‘Peer::Peer(int)’
   18 |   Peer(int port) {
      |        ~~~~^~~~
make[2]: *** [CMakeFiles/game.dir/build.make:90: CMakeFiles/game.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/game.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
